objects/adapps__OptimizerPlus_Triggers_per_Object_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Triggers_per_Object__c</fullName>
        <label>Triggers per Object</label>
        <referenceTo>adapps__OptimizerPlus_Triggers_Per_Object__c</referenceTo>
        <relationshipLabel>Triggers per Object Items</relationshipLabel>
        <relationshipName>Triggers_per_Object_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Triggers per Object Item</label>
    <nameField>
        <label>Triggers per Object Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Triggers per Object Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>